2014/12/02:
Removed support for the $previouserror keyword.
Removed support for --error-recovery mode.

2014/02/18:
In the Coq backend, use ' instead of _ as separator in identifiers.
Also, correct a serious bug that was inadvertently introduced on
2013/03/01 (r319).

2014/02/14
Lexer fix so as to support an open variant type [> ...] within
a %type<...> declaration.

2013/12/16
Updated the Makefile so that install no longer depends on all.
Updated the demos so that the lexer does not invoke "exit 0"
when encoutering eof. (This should be more intuitive.)

2013/09/11:
Fixed a newline conversion problem that would prevent Menhir from
building on Windows when using ocaml 4.01.

2013/03/02:
Switched to ocamlbuild. Many thanks to Daniel Weil for offering
very useful guidance.

2013/01/16:
"menhir --depend" was broken since someone added new whitespace in the output
of ocamldep. Fixed.

2012/12/19:
Fixed a compilation problem that would arise when a file produced
by Menhir on a 64-bit platform was compiled by ocaml on a 32-bit
platform.

2012/08/25:
Performance improvements in the computation of various information
about the automaton (module [Invariant]). The improvements will be
noticeable only for very large automata.

2012/06/07:
The option --log-grammar 3 (and above) now causes the FOLLOW sets for
*terminal* symbols to be computed and displayed.

2012/05/25:
Added the flag --canonical, which causes Menhir to produce a canonical LR(1)
automaton in the style of Knuth. This means that no merging of states takes
place during the construction of the automaton, and that no default reductions
are allowed.

2012/01/23:

Fixed a bug whereby a %nonassoc declaration was not respected. This
declaration requests that a shift/reduce conflict be reduced in favor of
neither shifting nor reducing, that is, a syntax error must occur. However,
due to an unforeseen interaction with the "default reduction" mechanism, this
declaration was sometimes ignored and reduction would take place.
