@@ -1,6 +1,6 @@
 REQUIREMENTS
 
-You need Objective Caml 3.09 or later, ocamlbuild, and GNU make.
+You need Objective Caml 4.02 or later, ocamlbuild, and GNU make.
 
 HOW TO INSTALL
 
