@@ -1,7 +1,7 @@
 Package: godi-menhir
 Version: VERSION
 Revision: 0
-Depends: godi-ocaml (>= 3.09)
+Depends: godi-ocaml (>= 4.02)
 Build-Depends:
 Sources: http://gallium.inria.fr/~fpottier/menhir/menhir-VERSION.tar.gz
 Homepage: http://gallium.inria.fr/~fpottier/menhir/
